Fix: Overflowing text inputs

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,11 @@ footer a:hover {
     font-size: 1.5rem;
 }
 
+.card input {
+    width: 100%;
+    margin-bottom: 0.5rem;
+}
+
 /*
     Bootstrap customisations
 */
@@ -105,6 +110,14 @@ footer a:hover {
 .card h4, .card p {
     padding: 0 !important;
     margin: 0 !important;
+}
+
+.modal-button {
+    padding: 0;
+}
+
+.card-img-top {
+    padding: 3rem;
 }
 
 /*
